--- a/web-app/browser/index.html
+++ b/web-app/browser/index.html
@@ -14,6 +14,44 @@
 </header>
 
 <aside>
+    <div id="props" class="props">Next Tetromino is:</div>
+    <div id="aside-grid" class="aside-grid">
+        <div id="aside-grid1"></div>
+        <div id="aside-grid2"></div>
+        <div id="aside-grid3"></div>
+        <div id="aside-grid4"></div>
+        <div id="aside-grid5"></div>
+        <div id="aside-grid6"></div>
+        <div id="aside-grid7"></div>
+        <div id="aside-grid8"></div>
+        <div id="aside-grid9"></div>
+        <div id="aside-grid10"></div>
+        <div id="aside-grid11"></div>
+        <div id="aside-grid12"></div>
+        <div id="aside-grid13"></div>
+        <div id="aside-grid14"></div>
+        <div id="aside-grid15"></div>
+        <div id="aside-grid16"></div>
+    </div>
+    <div id="xprops" class="xprops">hold is:</div>
+    <div id="xaside-grid" class="xaside-grid">
+        <div id="xaside-grid1"></div>
+        <div id="xaside-grid2"></div>
+        <div id="xaside-grid3"></div>
+        <div id="xaside-grid4"></div>
+        <div id="xaside-grid5"></div>
+        <div id="xaside-grid6"></div>
+        <div id="xaside-grid7"></div>
+        <div id="xaside-grid8"></div>
+        <div id="xaside-grid9"></div>
+        <div id="xaside-grid10"></div>
+        <div id="xaside-grid11"></div>
+        <div id="xaside-grid12"></div>
+        <div id="xaside-grid13"></div>
+        <div id="xaside-grid14"></div>
+        <div id="xaside-grid15"></div>
+        <div id="xaside-grid16"></div>
+    </div>
 </aside>
 
 <main>
